[gd_scene load_steps=2 format=2]

[ext_resource path="res://shop/shop_scene.gd" type="Script" id=1]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="shop_panel" type="PanelContainer" parent="."]
margin_left = -2.0
margin_top = -3.0
margin_right = 282.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop_options" type="MarginContainer" parent="shop_panel"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 277.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="shop_panel/shop_options"]
margin_right = 270.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBuy" type="Button" parent="shop_panel/shop_options/HBoxContainer"]
margin_left = 97.0
margin_right = 133.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
shortcut_in_tooltip = false
text = "Buy"

[node name="btnSell" type="Button" parent="shop_panel/shop_options/HBoxContainer"]
margin_left = 137.0
margin_right = 172.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sell"

[node name="shopList" type="ItemList" parent="shop_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 277.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy_sub_menu" type="PopupPanel" parent="shop_panel/shopList"]
margin_left = 192.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionList" type="ItemList" parent="shop_panel/shopList/buy_sub_menu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 84.0
margin_bottom = 60.0
items = [ "Item 0", null, false, "Item 1", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playerList" type="ItemList" parent="shop_panel"]
visible = false
margin_right = 280.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Small Potion x5", null, false ]
max_columns = 3
fixed_column_width = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sell_sub_menu" type="PopupPanel" parent="shop_panel/playerList"]
visible = true
margin_left = 192.0
margin_top = 40.0
margin_right = 280.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionList" type="ItemList" parent="shop_panel/playerList/sell_sub_menu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 84.0
margin_bottom = 60.0
items = [ "Item 0", null, false, "Item 1", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}
